# icpp-pro

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README-contributors-guide.md  README-release-guide.md  README.md  pre-commit-mac  pre-commit-ubuntu  pre-commit-win  pre-commit-windows  pyproject.toml  setup.py  windows-all-static.ps1  windows-all-static.sh  windows-all-tests.ps1  windows-all-tests.sh
.github/: trigger.txt
.github/workflows/: cicd-mac.yml  cicd-ubuntu.yml  cicd-win.yml  cicd-windows.yml  cicd.yml
scripts/: all_canister_deploy_local_pytest.py  all_canister_native.py  check_wasm_imports.py  get_file_names.py  smoketest-greet-c++17.ps1  smoketest.ps1
src/icpp/: __init__.py  __main__.py  call_function_from_name.py  callbacks.py  commands_build_library.py  commands_build_library_native.py  commands_build_native.py  commands_build_wasm.py  commands_build_wasm_library.py  commands_get.py  commands_init.py  commands_install_mingw64.py  commands_install_rust.py  commands_install_wasi_sdk.py  config_default.py  conftest_base.py  decorators.py  icpp_toml.py  options_build.py  options_main.py  pro.py  py.typed  run_dfx_cmd.py  run_shell_cmd.py  smoketest.py  utils.py  version.py  version_ic_wasi_polyfill.py  version_ic_wasm.py  version_mingw64.py  version_rust.py  version_wasi2ic.py  version_wasi_sdk.py
src/icpp/canisters/greet/: README.md  canister_ids.json  demo-c++17.ps1  demo-c++17.sh  demo.ps1  demo.sh  dfx.json  icpp-c++17.toml  icpp.toml
src/icpp/ic/candid/: candid.h  candid_assert.cpp  candid_assert.h  candid_deserialize.cpp  candid_deserialize.h  candid_opcode.cpp  candid_opcode.h  candid_serialize.cpp  candid_serialize.h  candid_type_base.cpp  candid_type_base.h  candid_type_bool.cpp  candid_type_bool.h  candid_type_empty.cpp  candid_type_empty.h  candid_type_float32.cpp  candid_type_float32.h  candid_type_float64.cpp  candid_type_float64.h  candid_type_int.cpp  candid_type_int.h  candid_type_int16.cpp  candid_type_int16.h  candid_type_int32.cpp  candid_type_int32.h  candid_type_int64.cpp  candid_type_int64.h  candid_type_int8.cpp  candid_type_int8.h  candid_type_nat.cpp  candid_type_nat.h  candid_type_nat16.cpp  candid_type_nat16.h  candid_type_nat32.cpp  candid_type_nat32.h  candid_type_nat64.cpp  candid_type_nat64.h  candid_type_nat8.cpp  candid_type_nat8.h  candid_type_null.cpp  (+81 more)
src/icpp/ic/canister/: canister.h  canister_base.cpp  canister_base.h  canister_cleanup_callback.cpp  canister_cleanup_callback.h  canister_global_timer.cpp  canister_global_timer.h  canister_heartbeat.cpp  canister_heartbeat.h  canister_init.cpp  canister_init.h  canister_inspect_message.cpp  canister_inspect_message.h  canister_post_upgrade.cpp  canister_post_upgrade.h  canister_pre_upgrade.cpp  canister_pre_upgrade.h  canister_query.cpp  canister_query.h  canister_reject_callback.cpp  canister_reject_callback.h  canister_reply_callback.cpp  canister_reply_callback.h  canister_start.cpp  canister_start.h  canister_update.cpp  canister_update.h
src/icpp/ic/ic0/: ic0.h  ic_wasi_polyfill.h  main.cpp
src/icpp/ic/ic0mock/: global.h  ic0.cpp  ic0.h  ic_wasi_polyfill.cpp  ic_wasi_polyfill.h  mock_ic.cpp  mock_ic.h  mock_ic_.h  mock_ic_constants.h
src/icpp/ic/icapi/: ic_api.cpp  ic_api.h  ic_http.h  wasm_symbol.h
src/icpp/ic/pro/: pro.cpp  pro.h
src/icpp/ic/vendors/: ZipIterator.hpp
src/icpp/ic/wasi_sdk_traps/: __wasilibc_initialize_environ.c  ic_trap.c  ic_trap.h  posix.c  unreachable.c
src/store_pro_files_for_cicd_of_free/: conftest_base.py
src_copy_of_smoketest_files/: pro.py
test/canisters/canister_1/: README.md  demo.ps1  demo.sh  dfx.json  icpp-c++17.toml  icpp.toml
test/canisters/canister_1/native/: main.cpp
test/canisters/canister_1/src/: compliance_test_construct.cpp  compliance_test_construct.h  compliance_test_prim.cpp  compliance_test_prim.h  my_canister.cpp  my_canister.did  my_canister.h  unit_test_candid.cpp  unit_test_candid.h  unit_test_ic_api.cpp  unit_test_ic_api.h  unit_test_vendors.cpp  unit_test_vendors.h
test/canisters/canister_1/test/: conftest.py  test_apis.py  test_one.py
test/canisters/canister_flags/: README.md  demo.ps1  demo.sh  dfx.json  icpp.toml
test/canisters/canister_flags/native/: main.cpp
test/canisters/canister_flags/src/: my_canister.cpp  my_canister.did  my_canister.h
test/canisters/canister_flags/test/: test_apis.py
test/canisters/canister_hooks/: README.md  demo.ps1  demo.sh  dfx.json  icpp.toml
test/canisters/canister_hooks/native/: main.cpp
test/canisters/canister_hooks/scripts/: optimize_wasm.py
test/canisters/canister_hooks/src/: my_canister.cpp  my_canister.did  my_canister.h
test/canisters/canister_hooks/test/: test_apis.py
test/canisters/canister_http/: README.md  canister_ids.json  counter.html  demo.ps1  demo.sh
test/canisters/canister_http/native/: main.cpp
test/canisters/canister_wasm64/: README.md  demo.ps1  demo.sh  dfx.json  icpp.toml
(+39 files in other folders)
