# Declare python project metadata
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icpp-pro"
requires-python = ">=3.8"
dynamic = [
    "version",
    "description",
    "authors",
    "readme",
    "classifiers",
    "keywords",
    "urls",
    "entry-points",
    "dependencies",
    "optional-dependencies",
    "license",
    "scripts",
]
