# Declare python project metadata
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icpp-pro"
description = "C++ Canister Development Kit (CDK) for the Internet Computer"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "icpp-pro", email = "icpp@icpp.world" }]
maintainers = [{ name = "icpp-pro", email = "icpp@icpp.world" }]
license = { file = "LICENSE" }
keywords = [
    "Internet Computer",
    "C++",
    "Canister Development Kit",
    "CDK",
    "Smart Contracts",
    "blockchain",
]
classifiers = [
    # How mature is this project? Common values are
    #   1 - Planning
    #   2 - Pre-Alpha
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by 'pip install'. See instead 'python_requires' below.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = [
    "version",
    "entry-points",
    "dependencies",
    "optional-dependencies",
    "scripts",
]

[project.urls]
Homepage = "https://www.onicai.com/"
Documentation = "https://docs.icpp.world/"
Repository = "https://github.com/icppWorld/icpp-pro"
Issues = "https://github.com/icppWorld/icpp-pro/issues"
Changelog = "https://docs.icpp.world/release-notes.html#changelog"
